# git-clone-stats

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  gcloud_deploy.md  index.html  main.py  pyproject.toml  requirements.txt  script.js  server.py
git_clone_stats/: __init__.py  app.py  auth.py  cli.py  db_factory.py  firestore_db.py  models.py  server.py  server_db_adapter.py  server_old.py  session.py  user_context.py
git_clone_stats/static/: index.html  repo-card-template.html  script.js  styles.css
