[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-clone-stats"
version = "1.0.3"
description = "GitHub repository clone statistics tracker with web dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Taylor Wilsdon", email = "taylor@example.com" },
]
keywords = ["github", "statistics", "analytics", "clone-tracking", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/taylorwilsdon/git-clone-stats"
Repository = "https://github.com/taylorwilsdon/git-clone-stats"
Issues = "https://github.com/taylorwilsdon/git-clone-stats/issues"
Documentation = "https://github.com/taylorwilsdon/git-clone-stats#readme"

[project.scripts]
git-clone-stats = "git_clone_stats.cli:main"

[project.entry-points."uv.tools"]
git-clone-stats = "git_clone_stats.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["git_clone_stats"]

[tool.hatch.build.targets.sdist]
include = [
    "/git_clone_stats",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel.shared-data]
"git_clone_stats/static" = "git_clone_stats/static"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true